# UnTIE

./: .gitignore  README.md  mdgt_requirements.txt  pyproject.toml
artifacts/: README.md
config/: config.py
datasets/: ruserrc_structured.csv  ruserrc_task.csv
docs/: component-inventory.md
experiments/: README.md
experiments/analysis/: results_analysis.py
experiments/analysis_results/: README.md
experiments/notebooks/: README.md  (+1 more)
model_params/: ruserrc_init_model.json  scart_init_model.json
requirements/: core.txt  dev.txt  requirements.txt  requirements_before_langchain.txt  requirements_for_langchain.txt
scripts/: 00_temp.ipynb  01 Test_notebook copy.ipynb  02_All_dataset_process.py  02_All_dataset_test.ipynb  02_Analysis.ipynb  03_Analysis_keywords_with_att.ipynb  03_Keywords_with_attention.ipynb  03_Keywords_with_attention.py  03_Keywords_with_attention_refactored.py  03_Keywords_with_attention_refactored_ru.py  03_RAG_testing.ipynb  03_corrected!_Analysis_keywords_with_att copy.ipynb  04_Generative.ipynb  04_Learning_text.ipynb  05_ru_dataset_Qwen.ipynb  05_ru_dataset_preproc.ipynb  05_ru_dataset_untie.ipynb  df_res_rubert.csv  metrics_analysis_summary.csv  ru_res_analysis.ipynb  run_attention.py  run_baseline.py  rus_df_res_with_qwen_answers.csv  system_check.py  worsened_cases.csv
tests/: test_core.py  test_results_analysis.py  test_ru_batch.py
untie/: __init__.py  attention.py  chunking.py  cli.py  config.py  data.py  domain.py  keywords.py  models.py  pipelines.py  protocols.py  qa.py  ranking.py  results_analysis.py  text.py
(+17 files in other folders)
