[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "untie"
version = "0.1.0"
description = "Extractive QA pipelines for structured analysis of scientific texts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
models = [
    "torch>=2.0",
    "transformers>=4.40",
    "sentence-transformers>=3.0",
]
nlp = [
    "nltk>=3.8",
    "pymorphy3>=2.0",
    "spacy>=3.7",
    "python-Levenshtein>=0.25",
]
notebooks = [
    "ipykernel>=6.0",
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "nbconvert>=7.0",
    "scipy>=1.8",
    "seaborn>=0.13",
    "statsmodels>=0.14",
]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["untie*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
